# auction

./: .dockerignore  .gitignore  .pre-commit.yaml  .vscode  Makefile  README.md  Readme.md  containers.py  pyproject.toml  requirements.txt  run.py  setup.cfg  todo
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: 18d463f4313f_never.py  213a4416c396_never.py  2c089260fda3_never.py  312d90263f10_never.py  576e5dbf5dc8_never.py  5e85753c303d_never.py  6dd89da21944_never.py  70fcb350ee10_never.py  840d2bae2230_never.py  94ac79106871_never.py  b0b0a7c3fe50_never.py  bd1a52be77ee_never.py  c9d1e0652d05_never.py  da8c9fba8a87_never.py  e89aa3916d37_never.py  f61bdf730a5e_never.py  f9b6704c2d43_never.py  fefdb6a83de0_never.py
pkg/kafka/: main.py
src/: settings.py
src/api/: __init__.py
src/api/endpoints/: __init__.py  auth.py  dependencies.py  health.py  lots.py  users.py
src/app/: basic.py  logger.py  main.py
src/app/consumer/: init.py
src/app/worker/: __main__.py  init.py
src/app/worker/tables/: count_table.py
src/app/worker/tasks/: __init__.py  balance.py  get_current_count.py  health.py  increment.py  lots.py  users.py
src/crud/: lot.py  lots.py  users.py
src/db/: database.py
src/dto/: auth.py  lots.py  users.py
src/models/: main.py
src/repositories/: auth.py  lots.py  users.py
src/utils/: base.py  exception_handlers.py  repository.py  unitofwork.py
tests/: test_app.py  test_user.py
tests/fixtures/: app.py
tests/load_tests/: test_main.py
