[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
