[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
faust-streaming = "^0.10.16"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.9"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
